# chat-rag

backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/api/: main.py
backend/app/api/routes/: pdf_chat.py  user.py  youtube_chat.py
backend/app/db/: auth.py  db.py  models.py  schemas.py
backend/app/utils/: token_utils.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ProtectedRoute.tsx  TokenLimitModal.tsx
frontend/src/components/context/: UserProvider.tsx  userContext.ts
frontend/src/components/hooks/: useTokenLimit.ts
frontend/src/components/pages/: AuthPage.tsx  ChatWithPDF.tsx  ChatWithYouTube.tsx  HomePage.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/ui/: alert-dialog.tsx  progress.tsx
